[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
clap = { version = "4.4.10", features = ["derive"] }
derive_more = "0.99.17"
once_cell = "1.18.0"

[dev-dependencies]
insta = "1.34.0"
